--- a/Login.html
+++ b/Login.html
@@ -14,6 +14,7 @@
     <input type="password" id="password" name="password" required><br><br>
   
     <button type="submit">Login</button>
+    <input type="hidden" name="redirect" value="https://github.com/specklesthekoala79-collab/urban-spoon.git">
   </form>
 </body>
 </html>
